<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NoteKeeping</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note_list_activity">NoteListActvity</string>
    <string name="_activity_note">Edit Note</string>
    <string name="menu_mail">send as email</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="note_title">Note title</string>
    <string name="note_body">Note Body</string>
    <string name="communications">Communications</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="notes">Notes</string>
    <string name="courses">Courses</string>
    <string name="textview">TextView</string>
    <string name="notesSelect">Notes</string>
    <string name="courses_notif">Courses</string>
    <string name="send_notif">Send</string>
    <string name="share_notif">Share</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="pref_favourite_social">Favourite Social network</string>
    <string name="pref_email_address">Email Address</string>


    <string name="general_header">General</string>
    <string name="general_title">General</string>
    <string name="display_name">Display Name</string>
    <string name="display_name_header">user_display_name</string>
    <string name="pref_default_display_name">Your name</string>
    <string name="pref_default_name">Yourname@yourhost.com</string>
    <string name="pref_title_favourite_social">Favourite Social Network</string>
    <string name="pref_default_email">YourEmail@host.com</string>
</resources>
